district: expand GNITC map context
